# gps_parser

./: README.txt  pyproject.toml
data/: postprocess.cfg
scripts/: setup-config.sh
src/gps_parser/: __init__.py  stations.cfg
tests/: test_gps_parser.py  test_gps_parser_init.py  test_init.py
