[project]
name = "gps_parser"
version = "0.3.0"
authors = [
  { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" },
  { name = "Maria Fernanda Gonzalez", email = "mariagr@vedur.is" },
]
description = "Parser library to work with gps library packages"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.sdist]
# packages = ["src/gps_parser"]
#
# [tool.hatch.build.targets.sdist.force-include]
# "data" = "gps_parser" # Include the fixtures directory in the sdist
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/gps_parser"]

# [tool.hatch.build.targets.wheel.force-include]
# "data" = "gps_parser" # Include the fixtures directory in the wheel
